--- a/charts/rancher-project-monitoring/0.2.2/templates/rancher-monitoring/hardened.yaml
+++ b/charts/rancher-project-monitoring/0.2.2/templates/rancher-monitoring/hardened.yaml
@@ -17,9 +17,9 @@ spec:
         app: {{ template "project-prometheus-stack.fullname" . }}-patch-sa
     spec:
       serviceAccountName: {{ template "project-prometheus-stack.fullname" . }}-patch-sa
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
+{{- if .Values.global.kubectl.securityContext }}
+      securityContext: {{ toYaml .Values.global.kubectl.securityContext | nindent 8 }}
+{{- end }}
       restartPolicy: Never
       nodeSelector: {{ include "linux-node-selector" . | nindent 8 }}
       tolerations: {{ include "linux-node-tolerations" . | nindent 8 }}
@@ -30,6 +30,12 @@ spec:
         imagePullPolicy: {{ $.Values.global.kubectl.pullPolicy }}
         command: ["kubectl", "patch", "serviceaccount", "default", "-p", "{\"automountServiceAccountToken\": false}"]
         args: ["-n", "{{ $ns }}"]
+{{- if $.Values.global.kubectl.resources }}
+        resources: {{ toYaml $.Values.global.kubectl.resources | nindent 10 }}
+{{- end }}
+{{- if $.Values.global.kubectl.containerSecurityContext }}
+        securityContext: {{ toYaml $.Values.global.kubectl.containerSecurityContext | nindent 10 }}
+{{- end }}
       {{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -106,19 +112,36 @@ spec:
   volumes:
     - 'secret'
 {{- end }}
+{{- $root := . }}
+{{- $projectNamespaceSelector := .Values.global.cattle.projectNamespaceSelector }}
+{{- $limitIngressToProject := .Values.global.networkPolicy.limitIngressToProject }}
+{{- $egressPolicy := .Values.global.networkPolicy.egress }}
+{{- $ingressPolicy := .Values.global.networkPolicy.ingress }}
 {{- range $_, $ns := $namespaces }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: default-allow-all
+  name: project-monitoring-policy
   namespace: {{ $ns }}
 spec:
   podSelector: {}
   ingress:
-  - {}
-  egress:
-  - {}
+{{- if or $ingressPolicy $limitIngressToProject }}
+{{- if $ingressPolicy }}
+{{ $ingressPolicy | toYaml | indent 4 }}
+{{- end }}
+{{- if $limitIngressToProject }}
+    - from:
+      - namespaceSelector: {{ $projectNamespaceSelector | toYaml | nindent 10 }}
+      - namespaceSelector:
+          matchLabels:
+            kubernetes.io/metadata.name: {{ $ns }}
+{{- end }}
+{{- else }}
+    - {}
+{{- end }}
+  egress: {{ $egressPolicy | toYaml | nindent 4 }}
   policyTypes:
   - Ingress
   - Egress
