--- a/charts/rancher-project-monitoring/0.3.1/templates/rancher-monitoring/hardened.yaml
+++ b/charts/rancher-project-monitoring/0.3.1/templates/rancher-monitoring/hardened.yaml
@@ -112,19 +112,36 @@ spec:
   volumes:
     - 'secret'
 {{- end }}
+{{- $root := . }}
+{{- $projectNamespaceSelector := .Values.global.cattle.projectNamespaceSelector }}
+{{- $limitIngressToProject := .Values.global.networkPolicy.limitIngressToProject }}
+{{- $egressPolicy := .Values.global.networkPolicy.egress }}
+{{- $ingressPolicy := .Values.global.networkPolicy.ingress }}
 {{- range $_, $ns := $namespaces }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: default-allow-all
+  name: project-monitoring-policy
   namespace: {{ $ns }}
 spec:
   podSelector: {}
   ingress:
+{{- if or $ingressPolicy $limitIngressToProject }}
+{{- if $ingressPolicy }}
+{{ $ingressPolicy | toYaml | indent 4 }}
+{{- end }}
+{{- if $limitIngressToProject }}
+    - from:
+      - namespaceSelector: {{ $projectNamespaceSelector | toYaml | nindent 10 }}
+      - namespaceSelector:
+          matchLabels:
+            kubernetes.io/metadata.name: {{ $ns }}
+{{- end }}
+{{- else }}
   - {}
-  egress:
-  - {}
+{{- end }}
+  egress: {{ $egressPolicy | toYaml | nindent 4 }}
   policyTypes:
   - Ingress
   - Egress
