--- a/packages/rancher-project-monitoring/generated-changes/overlay/questions.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/overlay/questions.yaml
@@ -30,7 +30,7 @@ questions:
 - variable: grafana.persistence.enabled
   type: boolean
   required: true
-  label: Grafana Persistent Volume Enabled
+  label: Enable Persistent Volume
   show_subquestion_if: true
   group: Grafana
   subquestions:
@@ -101,7 +101,7 @@ questions:
 - variable: prometheus.prometheusSpec.storage.enabled
   type: boolean
   required: true
-  label: Prometheus Persistent Volume Enabled
+  label: Enable Persistent Volume
   show_subquestion_if: true
   group: Prometheus
   subquestions:
