Ensure that disabling Alertmanager also removes RBAC like Grafana

--- a/packages/rancher-project-monitoring/generated-changes/overlay/templates/dashboard-roles.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/overlay/templates/dashboard-roles.yaml
@@ -17,8 +17,10 @@ rules:
   resourceNames:
   - "http:{{ template "project-prometheus-stack.fullname" . }}-prometheus:{{ .Values.prometheus.service.port }}"
   - "https:{{ template "project-prometheus-stack.fullname" . }}-prometheus:{{ .Values.prometheus.service.port }}"
+{{- if .Values.alertmanager.enabled }}
   - "http:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
   - "https:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
+{{- end }}
 {{- if .Values.grafana.enabled }}
   - "http:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
   - "https:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
@@ -35,12 +37,15 @@ rules:
   - endpoints
   resourceNames:
   - {{ template "project-prometheus-stack.fullname" . }}-prometheus
+{{- if .Values.alertmanager.enabled }}
   - {{ template "project-prometheus-stack.fullname" . }}-alertmanager
+{{- end }}
 {{- if .Values.grafana.enabled }}
   - {{ include "call-nested" (list . "grafana" "grafana.fullname") }}
 {{- end }}
   verbs:
   - list
+{{- if .Values.alertmanager.enabled }}
 - apiGroups:
   - ""
   resources:
@@ -54,6 +59,7 @@ rules:
   - update
   - patch
   - delete
+{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -73,8 +79,10 @@ rules:
   resourceNames:
   - "http:{{ template "project-prometheus-stack.fullname" . }}-prometheus:{{ .Values.prometheus.service.port }}"
   - "https:{{ template "project-prometheus-stack.fullname" . }}-prometheus:{{ .Values.prometheus.service.port }}"
+{{- if .Values.alertmanager.enabled }}
   - "http:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
   - "https:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
+{{- end }}
 {{- if .Values.grafana.enabled }}
   - "http:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
   - "https:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
@@ -91,12 +99,15 @@ rules:
   - endpoints
   resourceNames:
   - {{ template "project-prometheus-stack.fullname" . }}-prometheus
+{{- if .Values.alertmanager.enabled }}
   - {{ template "project-prometheus-stack.fullname" . }}-alertmanager
+{{- end }}
 {{- if .Values.grafana.enabled }}
   - {{ include "call-nested" (list . "grafana" "grafana.fullname") }}
 {{- end }}
   verbs:
   - list
+{{- if .Values.alertmanager.enabled }}
 - apiGroups:
   - ""
   resources:
@@ -109,6 +120,7 @@ rules:
   - watch
   - update
   - patch
+{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -128,8 +140,10 @@ rules:
   resourceNames:
   - "http:{{ template "project-prometheus-stack.fullname" . }}-prometheus:{{ .Values.prometheus.service.port }}"
   - "https:{{ template "project-prometheus-stack.fullname" . }}-prometheus:{{ .Values.prometheus.service.port }}"
+{{- if .Values.alertmanager.enabled }}
   - "http:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
   - "https:{{ template "project-prometheus-stack.fullname" . }}-alertmanager:{{ .Values.alertmanager.service.port }}"
+{{- end }}
 {{- if .Values.grafana.enabled }}
   - "http:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
   - "https:{{ include "call-nested" (list . "grafana" "grafana.fullname") }}:{{ .Values.grafana.service.port }}"
@@ -142,12 +156,15 @@ rules:
   - endpoints
   resourceNames:
   - {{ template "project-prometheus-stack.fullname" . }}-prometheus
+{{- if .Values.alertmanager.enabled }}
   - {{ template "project-prometheus-stack.fullname" . }}-alertmanager
+{{- end }}
 {{- if .Values.grafana.enabled }}
   - {{ include "call-nested" (list . "grafana" "grafana.fullname") }}
 {{- end }}
   verbs:
   - list
+{{- if .Values.alertmanager.enabled }}
 - apiGroups:
   - ""
   resources:
@@ -158,4 +175,5 @@ rules:
   - get
   - list
   - watch
+{{- end }}
 {{- end }}
