--- a/charts/rancher-project-monitoring/0.2.3-rc1/templates/rancher-monitoring/hardened.yaml
+++ b/charts/rancher-project-monitoring/0.2.3-rc1/templates/rancher-monitoring/hardened.yaml
@@ -112,11 +112,6 @@ spec:
   volumes:
     - 'secret'
 {{- end }}
-{{- $root := . }}
-{{- $projectNamespaceSelector := .Values.global.cattle.projectNamespaceSelector }}
-{{- $limitIngressToProject := .Values.global.networkPolicy.limitIngressToProject }}
-{{- $egressPolicy := .Values.global.networkPolicy.egress }}
-{{- $ingressPolicy := .Values.global.networkPolicy.ingress }}
 {{- range $_, $ns := $namespaces }}
 ---
 apiVersion: networking.k8s.io/v1
@@ -126,22 +121,8 @@ metadata:
   namespace: {{ $ns }}
 spec:
   podSelector: {}
-  ingress:
-{{- if or $ingressPolicy $limitIngressToProject }}
-{{- if $ingressPolicy }}
-{{ $ingressPolicy | toYaml | indent 4 }}
-{{- end }}
-{{- if $limitIngressToProject }}
-    - from:
-      - namespaceSelector: {{ $projectNamespaceSelector | toYaml | nindent 10 }}
-      - namespaceSelector:
-          matchLabels:
-            kubernetes.io/metadata.name: {{ $ns }}
-{{- end }}
-{{- else }}
-    - {}
-{{- end }}
-  egress: {{ $egressPolicy | toYaml | nindent 4 }}
+  ingress: {{- default (list dict | toYaml) (include "project-prometheus-stack.hardened.networkPolicy.ingress" (list $ $ns)) | nindent 4 }}
+  egress: {{- $.Values.global.networkPolicy.egress | toYaml | nindent 4 }}
   policyTypes:
   - Ingress
   - Egress
