--- a/packages/rancher-project-monitoring/generated-changes/exclude/templates/rancher-monitoring/exporters/rancher/servicemonitor.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/exclude/templates/rancher-monitoring/exporters/rancher/servicemonitor.yaml
@@ -14,13 +14,18 @@ spec:
       caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
       insecureSkipVerify: true
       serverName: rancher
+    metricRelabelings:
+    {{ if .Values.global.cattle.clusterId }}
+      - sourceLabels: [__address__]
+        targetLabel: cluster_id
+        replacement: {{ .Values.global.cattle.clusterId }}
+    {{- end }}
+    {{ if .Values.global.cattle.clusterName}}
+      - sourceLabels: [__address__]
+        targetLabel: cluster_name
+        replacement: {{ .Values.global.cattle.clusterName }}
+    {{- end }}
   jobLabel: rancher
-  {{ if .Values.global.cattle.clusterId }}
-  metricRelabelings:
-  - sourceLabels: [__address__]
-    targetLabel: cluster_id
-    replacement: {{ .Values.global.cattle.clusterId }}
-  {{- end }}
 {{- if .Values.rancherMonitoring.namespaceSelector }}
   namespaceSelector: {{ .Values.rancherMonitoring.namespaceSelector | toYaml | nindent 4 }}
 {{- end }}
