Revert "make charts"
This reverts commit 8b78be8dfb5ec9ccf591f80098bb67e17e7bf3ba.

--- a/charts/rancher-project-monitoring/0.2.2/questions.yaml
+++ b/charts/rancher-project-monitoring/0.2.2/questions.yaml
@@ -30,7 +30,7 @@ questions:
 - variable: grafana.persistence.enabled
   type: boolean
   required: true
-  label: Enable Persistent Volume
+  label: Grafana Persistent Volume Enabled
   show_subquestion_if: true
   group: Grafana
   subquestions:
@@ -101,7 +101,7 @@ questions:
 - variable: prometheus.prometheusSpec.storage.enabled
   type: boolean
   required: true
-  label: Enable Persistent Volume
+  label: Prometheus Persistent Volume Enabled
   show_subquestion_if: true
   group: Prometheus
   subquestions:
