--- a/packages/prometheus-federator/charts/Chart.yaml
+++ b/packages/prometheus-federator/charts/Chart.yaml
@@ -6,7 +6,7 @@ annotations:
   catalog.cattle.io/os: linux,windows
   catalog.cattle.io/permits-os: linux,windows
   catalog.cattle.io/provides-gvr: helm.cattle.io.projecthelmchart/v1alpha1
-  catalog.cattle.io/rancher-version: '>= 2.6.5-0 < 2.8.0-0'
+  catalog.cattle.io/rancher-version: '>= 2.6.5-0 <= 2.8.0-0'
   catalog.cattle.io/release-name: prometheus-federator
 apiVersion: v2
 appVersion: 0.2.2
@@ -17,4 +17,4 @@ dependencies:
 description: Prometheus Federator
 icon: https://raw.githubusercontent.com/rancher/prometheus-federator/main/assets/logos/prometheus-federator.svg
 name: prometheus-federator
-version: 0.2.3
+version: 0.2.2
