--- a/charts/rancher-project-monitoring/0.3.1/values.yaml
+++ b/charts/rancher-project-monitoring/0.3.1/values.yaml
@@ -759,6 +759,9 @@ grafana:
       ## Annotations for Grafana dashboard configmaps
       ##
       annotations: {}
+      multicluster:
+        global:
+          enabled: false
       provider:
         allowUiUpdates: false
     datasources:
