--- a/charts/prometheus-federator/0.3.1/charts/helmProjectOperator/values.yaml
+++ b/charts/prometheus-federator/0.3.1/charts/helmProjectOperator/values.yaml
@@ -126,9 +126,11 @@ nameOverride: ""
 
 namespaceOverride: ""
 
+replicas: 1
+
 image:
   repository: rancher/helm-project-operator
-  tag: v0.1.0
+  tag: v0.2.0
   pullPolicy: IfNotPresent
 
 helmController:
