--- a/.github/workflows/e2e-ci.yaml
+++ b/.github/workflows/e2e-ci.yaml
@@ -28,7 +28,7 @@ on:
 env:
   GOARCH: amd64
   CGO_ENABLED: 0
-  SETUP_GO_VERSION: '^1.18'
+  SETUP_GO_VERSION: '^1.20'
   YQ_VERSION: v4.25.1
   E2E_CI: true
   REPO: rancher
@@ -48,7 +48,7 @@ jobs:
       matrix:
         k3s_version:
           # k3d version list k3s | sed 's/+/-/' | sort -h
-          - ${{ github.event.inputs.k3s_version || 'v1.20.15-k3s1' }}
+          - ${{ github.event.inputs.k3s_version || 'v1.28.4-k3s2' }}
     steps:
       -
         uses: actions/checkout@v3
@@ -56,9 +56,11 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v4
         with:
-          go-version: '>=1.17.0'
+          go-version: '>=1.20.0'
       - uses: azure/setup-kubectl@v3
       - uses: azure/setup-helm@v3
+        with:
+          version: v3.11.1
       -
         name: Install mikefarah/yq
         run: |
