--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,14 +22,15 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '1.22'
-      - name: Package helm chart
-        ./scripts/build-chart
       - name : Install helm
         run : |
           curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
           chmod 700 get_helm.sh
           ./get_helm.sh
           helm version
+          rm get_helm.sh
+      - name: Package helm chart
+        run : ./scripts/build-chart
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
