--- a/packages/rancher-project-monitoring/package.yaml
+++ b/packages/rancher-project-monitoring/package.yaml
@@ -1,7 +1,7 @@
 workingDir: ""
 url: https://github.com/rancher/charts.git
-subdirectory: charts/rancher-monitoring/103.0.2+up45.31.1
-commit: 601e6b78a9c2d2aff99a314bc1c23c2b7d2cb10a
+subdirectory: charts/rancher-monitoring/104.0.0-rc1+up57.0.3
+commit: 414f0688c935dd41145a037c1ae25cae9ebe2159
 version: 0.4.1
 ignoreDependencies:
   - hardenedKubelet
