--- a/.github/workflows/e2e-ci.yaml
+++ b/.github/workflows/e2e-ci.yaml
@@ -124,6 +124,9 @@ jobs:
       -
         name: Check if Project Registration Namespace is auto-created on namespace detection
         run: ./.github/workflows/e2e/scripts/create-project-namespace.sh;
+      -
+        name: Create Project Monitoring Stack via ProjectHelmChart CR
+        run: ./.github/workflows/e2e/scripts/create-projecthelmchart.sh;
 
       # Commenting out for failure in CI but not locally
       # -
@@ -154,9 +157,9 @@ jobs:
       # -
       #   name: Validate Project Alertmanager
       #   run: ./.github/workflows/e2e/scripts/validate-project-alertmanager.sh;
-      # - 
-      #   name: Delete Project Prometheus Stack
-      #   run: ./.github/workflows/e2e/scripts/delete-projecthelmchart.sh;
+      -
+        name: Delete Project Prometheus Stack
+        run: ./.github/workflows/e2e/scripts/delete-projecthelmchart.sh;
       - 
         name: Uninstall Prometheus Federator
         run: ./.github/workflows/e2e/scripts/uninstall-federator.sh;
