--- a/.github/workflows/e2e-ci.yaml
+++ b/.github/workflows/e2e-ci.yaml
@@ -128,6 +128,10 @@ jobs:
         name: Create Project Monitoring Stack via ProjectHelmChart CR
         run: ./.github/workflows/e2e/scripts/create-projecthelmchart.sh;
       -
+        name: Wait for a few minutes for chart installs
+        run: |
+          for i in {1..12}; do sleep 10; echo "Waited $((i*10)) seconds for metrics to be populated"...; done;
+      -
         name: Check if the Project Prometheus Stack is up
         run: ./.github/workflows/e2e/scripts/validate-project-monitoring.sh;
       # -
