Remove unnecessary condition... ...if this were ever false then the chart does nothing.

--- a/packages/prometheus-federator/charts/Chart.yaml
+++ b/packages/prometheus-federator/charts/Chart.yaml
@@ -9,8 +9,7 @@ annotations:
 apiVersion: v2
 appVersion: 0.4.3-rc.1
 dependencies:
-- condition: helmProjectOperator.enabled
-  name: helmProjectOperator
+- name: helmProjectOperator
   repository: file://./charts/helmProjectOperator
   version: 0.3.1
 description: Prometheus Federator
