--- a/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/templates/deployment.yaml
+++ b/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/templates/deployment.yaml
@@ -6,7 +6,9 @@ metadata:
   labels: {{ include "helm-project-operator.labels" . | nindent 4 }}
     app: {{ template "helm-project-operator.name" . }}
 spec:
-  replicas: {{ include "replicaDefault" . }}
+  {{- if .Values.replicas }}
+  replicas: {{ .Values.replicas }}
+  {{- end }}
   selector:
     matchLabels:
       app: {{ template "helm-project-operator.name" . }}
