--- a/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/values.yaml
+++ b/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/values.yaml
@@ -129,8 +129,8 @@ namespaceOverride: ""
 replicas: 1
 
 image:
-  repository: rancher/helm-project-operator
-  tag: v0.2.1
+  repository: ghcr.io/rancher/helm-project-operator
+  tag: v0.3.0
   pullPolicy: IfNotPresent
 
 helmController:
