--- a/charts/prometheus-federator/0.4.3-rc.1/Chart.yaml
+++ b/charts/prometheus-federator/0.4.3-rc.1/Chart.yaml
@@ -7,12 +7,11 @@ annotations:
   catalog.cattle.io/provides-gvr: helm.cattle.io.projecthelmchart/v1alpha1
   catalog.cattle.io/release-name: prometheus-federator
 apiVersion: v2
-appVersion: 0.3.5
+appVersion: 0.4.3-rc.1
 dependencies:
-- condition: helmProjectOperator.enabled
-  name: helmProjectOperator
+- name: helmProjectOperator
   repository: file://./charts/helmProjectOperator
-  version: 0.2.1
+  version: 0.3.1
 description: Prometheus Federator
 icon: https://raw.githubusercontent.com/rancher/prometheus-federator/main/assets/logos/prometheus-federator.svg
 name: prometheus-federator
