--- a/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/Chart.yaml
+++ b/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/Chart.yaml
@@ -9,7 +9,10 @@ annotations:
   catalog.cattle.io/rancher-version: '>= 2.6.0-0'
   catalog.cattle.io/release-name: helm-project-operator
 apiVersion: v2
-appVersion: 0.2.1
+appVersion: v0.3.1
 description: Helm Project Operator
+maintainers:
+- email: dan.pock@suse.com
+  name: Dan Pock
 name: helmProjectOperator
-version: 0.2.1
+version: 0.3.1
