--- a/.github/workflows/e2e-ci.yaml
+++ b/.github/workflows/e2e-ci.yaml
@@ -143,9 +143,11 @@ jobs:
       -
         name: Validate Project Grafana Dashboards
         run: ./.github/workflows/e2e/scripts/validate-project-grafana-dashboards.sh;
-      -
-        name: Validate Project Grafana Dashboard Data
-        run: ./.github/workflows/e2e/scripts/validate-project-grafana-dashboard-data.sh;
+      # Re-disable this as it's been broken since Jun 28, 2023
+      # More context: https://github.com/rancher/prometheus-federator/pull/73
+      #  -
+      #    name: Validate Project Grafana Dashboard Data
+      #    run: ./.github/workflows/e2e/scripts/validate-project-grafana-dashboard-data.sh;
       -
         name: Validate Project Prometheus Alerts
         run: ./.github/workflows/e2e/scripts/validate-project-prometheus-alerts.sh;
