Adjust where embeded file data for cli lives

--- a/scripts/build
+++ b/scripts/build
@@ -2,6 +2,7 @@
 set -e
 
 source $(dirname $0)/version
+BUILD_CMD_TARGET=${BUILD_CMD_TARGET:-"./cmd/prometheus-federator/main.go"}
 
 cd $(dirname $0)/..
 
@@ -30,11 +31,11 @@ fi
 echo "Building for Arch(s): ${ARCHES[*]}"
 
 for A in "${ARCHES[@]}" ; do
-  GOARCH="$A" CGO_ENABLED=0 go build -ldflags "$LINKFLAGS $OTHER_LINKFLAGS" -o "build/bin/prometheus-federator-$A"
+  GOARCH="$A" CGO_ENABLED=0 go build -ldflags "$LINKFLAGS $OTHER_LINKFLAGS" -o "build/bin/prometheus-federator-$A" "${BUILD_CMD_TARGET}"
   # Set CROSS to build for other OS'es
   if [ "$CROSS" = "true" ]; then
     for OS in darwin windows ; do
-          GOARCH="$A" GOOS=$OS go build -ldflags "$LINKFLAGS" -o "build/bin/prometheus-federator-$OS-$A"
+          GOARCH="$A" GOOS=$OS go build -ldflags "$LINKFLAGS" -o "build/bin/prometheus-federator-$OS-$A" "${BUILD_CMD_TARGET}"
           echo "Built \`prometheus-federator-$OS-$A\`"
     done
   fi
