--- a/packages/prometheus-federator/generated-changes/dependencies/helmProjectOperator/dependency.yaml
+++ b/packages/prometheus-federator/generated-changes/dependencies/helmProjectOperator/dependency.yaml
@@ -1,2 +1,2 @@
-url: https://github.com/rancher/helm-project-operator/releases/download/v0.3.1/helm-project-operator-0.3.1.tgz
-doNotRelease: true
+workingDir: ""
+url: packages/helm-project-operator
