--- a/.github/workflows/prom-fed-e2e-ci.yaml
+++ b/.github/workflows/prom-fed-e2e-ci.yaml
@@ -52,7 +52,12 @@ permissions:
 jobs:
   prebuild-env:
     name: Prebuild needed Env vars
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch:
+          - x64
+          - arm64
+    runs-on : runs-on,image=ubuntu22-full-${{ matrix.arch }},runner=4cpu-linux-${{ matrix.arch }},run-id=${{ github.run_id }}
     steps:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
@@ -67,14 +72,17 @@ jobs:
     needs: [
       prebuild-env,
     ]
-    runs-on: ubuntu-latest
-    env:
-      TAG: ${{ needs.prebuild-env.outputs.branch_static_tag }}
     strategy:
       matrix:
+        arch:
+          - x64
+          - arm64
         k3s_version:
           # k3d version list k3s | sed 's/+/-/' | sort -h
           - ${{ github.event.inputs.k3s_version || 'v1.28.14-k3s1' }}
+    runs-on : runs-on,image=ubuntu22-full-${{ matrix.arch }},runner=4cpu-linux-${{ matrix.arch }},run-id=${{ github.run_id }}
+    env:
+      TAG: ${{ needs.prebuild-env.outputs.branch_static_tag }}
     steps:
       -
         uses: actions/checkout@v3
