--- a/.github/workflows/prom-fed-ci.yaml
+++ b/.github/workflows/prom-fed-ci.yaml
@@ -38,11 +38,6 @@ jobs:
         run: |
           sudo wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${{ matrix.arch == 'x64' && 'amd64' || matrix.arch  }} -O /usr/bin/yq && sudo chmod +x /usr/bin/yq;
       - name : Install helm
-        run : |
-          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-          chmod 700 get_helm.sh
-          ./get_helm.sh
-          rm get_helm.sh
-          helm version
+        uses: azure/setup-helm@v3
       - name: Run CI
         run: make ci
