--- a/package/Dockerfile-helm-project-operator
+++ b/package/Dockerfile-helm-project-operator
@@ -26,7 +26,7 @@ WORKDIR /usr/src/app
 ENV YQ_VERSION=v4.25.1
 RUN zypper -n install git curl wget make
 RUN export ARCH=$(go env GOHOSTARCH)
-RUN wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64 -O /usr/bin/yq && chmod +x /usr/bin/yq;
+RUN wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${TARGETARCH} -O /usr/bin/yq && chmod +x /usr/bin/yq;
 COPY --from=helm /helm/bin/helm /usr/local/bin/
 COPY go.mod go.sum ./
 RUN go mod download
@@ -39,6 +39,6 @@ RUN echo 'helmprojectoperator:x:1000:1000::/home/helmprojectoperator:/bin/bash' 
     echo 'helmprojectoperator:x:1000:' >> /etc/group && \
     mkdir /home/helmprojectoperator && \
     chown -R helmprojectoperator:helmprojectoperator /home/helmprojectoperator
-COPY --from=builder /usr/src/app/bin/helm-project-operator /usr/bin/
+COPY --from=builder /usr/src/app/build/bin/helm-project-operator /usr/bin/
 USER helmprojectoperator
 CMD ["helm-project-operator"]
