--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./package/Dockerfile
+          file: ./package/Dockerfile-prometheus-federator
           push: true
           tags: ${{ env.IMAGE }}
           platforms: linux/amd64,linux/arm64
